# graphics

./: .gitignore  Graficos.sln  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac
Graficos/: Graficos.vcproj
Graficos/source/: CApplication.cpp  CApplication.h  CCallback.h  CCamera.cpp  CCamera.h  CCameraAttached.cpp  CCameraAttached.h  CCameraCinematic.cpp  CCameraCinematic.h  CCameraFixed.cpp  CCameraFixed.h  CCameraTestDriver.cpp  CCameraTestDriver.h  CColor.h  CController.cpp  CController.h  CCrosshair.cpp  CCrosshair.h  CDefaultRenderer.cpp  CDefaultRenderer.h  CDirectory.h  CDirectory_posix.cpp  CDirectory_posix.h  CDirectory_win32.cpp  CDirectory_win32.h  CEntity.cpp  CEntity.h  CEntityModel.cpp  CEntityModel.h  CGame.cpp  CGame.h  CGameScript.cpp  CGameScript.h  CLight.h  CMaterial.h  CMatrix.h  CMatrixFactory.h  CModel.cpp  CModel.h  CModelManager.cpp  (+35 more)
VCollide/: Makefile  RAPID.lib  VCollide.lib
VCollide/MSVC_Compile/: RAPID.vcproj  VCollide.vcproj  VCollide2.sln
VCollide/src/: VInternal.C
data/: ships.xml
glew/: Makefile  glew32.lib
models/: Copia de daedalus.col  Copia de daedalus.mtl  Copia de hatak.col  Copia de hatak.mtl  plasma.mtl
tinyxml/: Makefile  tinyXmlTest.vcproj  tinyXmlTestSTL.vcproj  tinyxml.lib  tinyxml.sln  tinyxmlSTL.vcproj  tinyxml_lib.vcproj
